--- a/front/src/component/contact/contactCard.css
+++ b/front/src/component/contact/contactCard.css
@@ -10,7 +10,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #060606;
+  background: linear-gradient(115deg, #56d8e4 10%, #9f01ea 90%);
 }
 button, input, select, textarea {
   font: inherit;
